--- a/Syntagh/Properties/Resources.resx
+++ b/Syntagh/Properties/Resources.resx
@@ -118,7 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="τελικοαμαν" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\τελικοαμαν.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="set-doctor-cartoon-characters-medical-staff-team-concept-hospital_36082-551" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\set-doctor-cartoon-characters-medical-staff-team-concept-hospital_36082-551.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="αρχείο λήψης" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\αρχείο λήψης.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="αρχείο λήψης (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\αρχείο λήψης (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="set-doctor-cartoon-characters-medical-staff-team-concept-hospital_36082-5511" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\set-doctor-cartoon-characters-medical-staff-team-concept-hospital_36082-5511.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
